--- a/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/Index.cshtml
@@ -25,16 +25,16 @@
         <div class="table-responsive" style="min-height:300px">
             @Html.Grid(Model).Columns(columns =>
             {
-                columns.Add(c => c.C_TrabajadorCod).Titled("Cod.Per.").Css("text-left").Filterable(true);
-                columns.Add(c => c.T_TipoDocumentoDesc).Titled("Tip.Doc.").Css("text-left").Filterable(true);
-                columns.Add(c => c.C_NumDocumento).Titled("Num.Doc.").Css("text-center").Filterable(true);
-                columns.Add(c => c.T_ApellidosNombre).Titled("Apellidos y Nombres").Css("text-left").Filterable(true);
-                columns.Add(c => c.T_DependenciaDesc).Titled("Dependencia").Css("text-left").Filterable(true);
-                columns.Add(c => c.T_FechaIngreso).Titled("Fech.Ingreso").Css("text-center").Filterable(true);
-                columns.Add(c => c.T_RegimenDesc).Titled("Régimen").Css("text-center").Filterable(true);
-                columns.Add(c => c.T_VinculoDesc).Titled("Vínculo").Css("text-left").Filterable(true);
-                columns.Add(c => c.T_EstadoDesc).Titled("Estado").Css("text-center").Filterable(true);
-                columns.Add().SetWidth(150).Encoded(false).Sanitized(false).RenderValueAs(model => @<a href="@Url.Action("Editar", "Trabajadores", new { id = model.I_TrabajadorID })" class="modal-link-lg"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> <span class="d-none d-md-inline-block">Editar</span></a>);
+                columns.Add(c => c.trabajadorCod).Titled("Cod.Per.").Css("text-left").Filterable(true);
+                columns.Add(c => c.tipoDocumentoDesc).Titled("Tip.Doc.").Css("text-left").Filterable(true);
+                columns.Add(c => c.numDocumento).Titled("Num.Doc.").Css("text-center").Filterable(true);
+                columns.Add(c => c.apellidosNombre).Titled("Apellidos y Nombres").Css("text-left").Filterable(true);
+                columns.Add(c => c.dependenciaDesc).Titled("Dependencia").Css("text-left").Filterable(true);
+                columns.Add(c => c.fechaIngreso).Titled("Fech.Ingreso").Css("text-center").Filterable(true);
+                columns.Add(c => c.regimenDesc).Titled("Régimen").Css("text-center").Filterable(true);
+                columns.Add(c => c.vinculoDesc).Titled("Vínculo").Css("text-left").Filterable(true);
+                columns.Add(c => c.estadoDesc).Titled("Estado").Css("text-center").Filterable(true);
+                columns.Add().SetWidth(150).Encoded(false).Sanitized(false).RenderValueAs(model => @<a href="@Url.Action("Editar", "Trabajadores", new { id = model.trabajadorID })" class="modal-link-lg"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> <span class="d-none d-md-inline-block">Editar</span></a>);
             }).WithPaging(12).Sortable(true).WithGridItemsCount("Registros encontrados").EmptyText("No se encontraron registros")
         </div>
 
