--- a/src/app/00078-GestionPlanillas/WebApp/Views/Planillas/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Planillas/Index.cshtml
@@ -1,7 +1,4 @@
-﻿@model IEnumerable<WebApp.Models.ResumenPlanillaTrabajadorModel>
-@using GridMvc.Html
-
-<div class="container-fluid">
+﻿<div class="container-fluid">
     <div class="col-12 mb-4">
         <section class="content-header">
             <nav aria-label="breadcrumb">
@@ -40,7 +37,7 @@
 
                                 <div class="form-group col-lg-2 col-4">
                                     <label>&nbsp;</label>
-                                    <button type="submit" class="btn btn-block btn-outline-primary"><i class="fa fa-fw fa-search"></i> Consultar</button>
+                                    <button type="button" class="btn btn-block btn-outline-primary"><i class="fa fa-fw fa-search"></i> Consultar</button>
                                 </div>
                             </div>
                         }
@@ -50,33 +47,123 @@
         </div>
 
         <div class="table-responsive mt-4" style="min-height:300px">
-            @Html.Grid(Model).Columns(columns =>
-            {
-                columns.Add(c => c.categoriaPlanillaDesc).Titled("Planilla").Css("text-left").Filterable(true);
-                columns.Add(c => c.anio).Titled("Año").Css("text-left").Filterable(true);
-                columns.Add(c => c.mesDesc).Titled("Mes").Css("text-left").Filterable(true);
-                columns.Add(c => c.tipoDocumentoDesc).Titled("Tip.Doc.").Css("text-left").Filterable(true);
-                columns.Add(c => c.numDocumento).Titled("Num.Doc.").Css("text-center").Filterable(true);
-                columns.Add(c => c.apellidosNombre).Titled("Apellidos y Nombres").Css("text-left").Filterable(true);
-                columns.Add(c => c.regimenDesc).Titled("Régimen").Css("text-center").Filterable(true);
-                columns.Add(c => c.totalRemuneracion).Titled("Remu.").Css("text-center");
-                columns.Add(c => c.totalReintegro).Titled("Reint.").Css("text-center");
-                columns.Add(c => c.totalDeduccion).Titled("Deducc.").Css("text-center");
-                columns.Add(c => c.totalBruto).Titled("Bruto").Css("text-center");
-                columns.Add(c => c.totalDescuento).Titled("Desc.").Css("text-center");
-                columns.Add(c => c.totalSueldo).Titled("Total.").Css("text-center");
-            }).WithPaging(12).Sortable(true).WithGridItemsCount("Registros encontrados").EmptyText("No se encontraron registros")
+            <table class="table table-hover" id="dataTablePlanilla" width="100%">
+                <thead class="thead-dark">
+                    <tr>
+                        <th>Planilla</th>
+                        <th>Año</th>
+                        <th>Mes</th>
+                        <th>Tip.Doc.</th>
+                        <th>Num.Doc.</th>
+                        <th>Apellidos y Nombres</th>
+                        <th>Régimen</th>
+                        <th>Remu.</th>
+                        <th>Reint.</th>
+                        <th>Deducc.</th>
+                        <th>Bruto</th>
+                        <th>Desc.</th>
+                        <th>Total</th>
+                    </tr>
+                </thead>
+                <tfoot>
+                    <tr>
+                        <th>Planilla</th>
+                        <th>Año</th>
+                        <th>Mes</th>
+                        <th>Tip.Doc.</th>
+                        <th>Num.Doc.</th>
+                        <th>Apellidos y Nombres</th>
+                        <th>Régimen</th>
+                        <th>Remu.</th>
+                        <th>Reint.</th>
+                        <th>Deducc.</th>
+                        <th>Bruto</th>
+                        <th>Desc.</th>
+                        <th>Total</th>
+                    </tr>
+                </tfoot>
+            </table>
         </div>
 
     </div>
 </div>
 
-<script>
-    $("#frmConsultaResumenPlanilla").on("change", "#anio", function () {
-        let cmbDestino = $('#frmConsultaResumenPlanilla #mes');
+@section scripts {
+    <script type="text/javascript">
+        $(document).ready(function () {
+             generarDatatablePlanilla(null, null, null);
 
-        let url = '@Url.Action("ObtenerMesesPorAnio", "General")';
+             $("#frmConsultaResumenPlanilla").on("change", "#anio", function () {
+                let cmbDestino = $('#frmConsultaResumenPlanilla #mes');
 
-        CargarMeses(this, cmbDestino, url);
-    });
-</script>
+                let url = '@Url.Action("ObtenerMesesPorAnio", "General")';
+
+                CargarMeses(this, cmbDestino, url);
+             });
+
+            $("#frmConsultaResumenPlanilla").on("click", "button", function () {
+                let anio = $("#frmConsultaResumenPlanilla #anio").val();
+                let mes = $("#frmConsultaResumenPlanilla #mes").val();
+                let idCategoria = $("#frmConsultaResumenPlanilla #idCategoria").val();
+
+                generarDatatablePlanilla(anio, mes, idCategoria);
+            });
+        });
+
+        function generarDatatablePlanilla(anio, mes, idCategoria) {
+            let parametros = {
+                anio: anio,
+                mes: mes,
+                idCategoria: idCategoria
+            };
+
+            $('#dataTablePlanilla').DataTable({
+                ajax: {
+                    'url': '@Url.Action("ObtenerListaTrabajadoreConPlanilla", "Planillas")',
+                    'data': parametros,
+                    'type': 'get'
+                },
+                columns: [
+                    { data: 'categoriaPlanillaDesc' },
+                    { data: 'anio' },
+                    { data: 'mesDesc' },
+                    { data: 'tipoDocumentoDesc' },
+                    { data: 'numDocumento' },
+                    { data: 'apellidosNombre' },
+                    { data: 'regimenDesc' },
+                    { data: 'totalRemuneracionFormat' },
+                    { data: 'totalReintegroFormat' },
+                    { data: 'totalDeduccionFormat' },
+                    { data: 'totalBrutoFormat' },
+                    { data: 'totalDescuentoFormat' },
+                    { data: 'totalSueldoFormat' }
+                ],
+                "bStateSave": false,
+                bDestroy: true,
+                lengthMenu: [[5, 10, 25, 50, -1], [5, 10, 25, 50, "Todas"]],
+                iDisplayLength: 5,
+                language: {
+                    search: "Buscar: ",
+                    lengthMenu: "Mostrar _MENU_ filas",
+                    info: "Mostrando del _START_ al _END_ de _TOTAL_ elementos.",
+                    infoEmpty: "No se encontraron registros.",
+                    zeroRecords: "No hay data disponible.",
+                    emptyTable: "No hay data disponible.",
+                    paginate: {
+                        first: "Primero",
+                        previous: "Previo",
+                        next: "Siguiente",
+                        last: "Último"
+                    },
+                    aria: {
+                        sortAscending: ": activar para ordenar la columna en orden ascendente",
+                        sortDescending: ": activar para ordenar la columna en orden descendente"
+                    },
+                    loadingRecords: "Cargando...",
+                    processing: "Procesando..."
+                },
+                searching: true
+            });
+        }
+    </script>
+}
