--- a/src/app/00078-GestionPlanillas/WebApp/Views/PlantillaPlanilla/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/PlantillaPlanilla/Index.cshtml
@@ -1,6 +1,4 @@
-﻿@model IEnumerable<WebApp.Models.ConceptoModel>
-
-<div class="container-fluid">
+﻿<div class="container-fluid">
     <div class="col-12 mb-4">
         <section class="content-header">
             <nav aria-label="breadcrumb">
